add get yun bi account function

--- a/kraken/pom.xml
+++ b/kraken/pom.xml
@@ -191,6 +191,12 @@
         </pluginRepository>
     </pluginRepositories>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>cashrusher</groupId>
+            <artifactId>cashrusher-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
