--- a/kraken/pom.xml
+++ b/kraken/pom.xml
@@ -171,7 +171,7 @@
             <url>https://repo.maven.apache.org/maven2</url>
             <layout>default</layout>
             <snapshots>
-                <enabled>false</enabled>
+                <enable>false</enable>
             </snapshots>
         </repository>
     </repositories>
@@ -183,7 +183,7 @@
             <url>https://repo.maven.apache.org/maven2</url>
             <layout>default</layout>
             <snapshots>
-                <enabled>false</enabled>
+                <enable>false</enable>
             </snapshots>
             <releases>
                 <updatePolicy>never</updatePolicy>
