--- a/kraken/pom.xml
+++ b/kraken/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kraken</artifactId>
-    <packaging>pom</packaging>
-    <name>kraken</name>
+    <packaging>war</packaging>
 
     <profiles>
         <profile>
@@ -194,8 +193,8 @@
     <dependencies>
         <dependency>
             <groupId>cashrusher</groupId>
-            <artifactId>cashrusher-common</artifactId>
-            <version>1.0</version>
+            <artifactId>commons</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
