--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -2,14 +2,12 @@
         <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>cashrusher</artifactId>
         <groupId>cashrusher</groupId>
+        <artifactId>cashrusher</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <name>cashrusher-common</name>
-    <artifactId>cashrusher-common</artifactId>
-    <version>1.0</version>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>commons</artifactId>
 
 </project>
