--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>yunbi</module>
-        <module>cashrusher-common</module>
+        <module>commons</module>
         <module>kraken</module>
         <module>okcoin</module>
     </modules>
     <packaging>pom</packaging>
-    <name>cashrusher</name>
 
     <properties>
         <springframework.version>4.1.0.RELEASE</springframework.version>
@@ -54,7 +53,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2</version>
+                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <goals>
