--- a/rusher/src/main/webapp/WEB-INF/web.xml
+++ b/rusher/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>assetProcessEndpoint</servlet-name>
-        <url-pattern>/json/assert</url-pattern>
+        <url-pattern>/json/asset</url-pattern>
     </servlet-mapping>
 
 
