add support jiacha api

--- a/rusher/src/main/webapp/WEB-INF/web.xml
+++ b/rusher/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,15 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>jiachadataProcessEndpoint</servlet-name>
+        <servlet-class>com.rusher.servlet.DelegatingServletProxy</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>jiachadataProcessEndpoint</servlet-name>
+        <url-pattern>/json/jiachadata</url-pattern>
+    </servlet-mapping>
+
     <filter>
         <filter-name>openEntityManagerInView</filter-name>
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
