add setting connection api

--- a/rusher/src/main/webapp/WEB-INF/web.xml
+++ b/rusher/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,15 @@
         <servlet-name>testConnectionProcessEndpoint</servlet-name>
         <url-pattern>/settings/testconnection</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>connectionSettingProcessEndpoint</servlet-name>
+        <servlet-class>com.rusher.servlet.DelegatingServletProxy</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>connectionSettingProcessEndpoint</servlet-name>
+        <url-pattern>/settings/platform</url-pattern>
+    </servlet-mapping>
+
 
     <servlet>
         <servlet-name>jiachadataProcessEndpoint</servlet-name>
