--- a/rusher/src/main/profiles/dev/jdbc.properties
+++ b/rusher/src/main/profiles/dev/jdbc.properties
@@ -5,7 +5,7 @@ jdbc.initialpoolsize = 5
 hibernate.showsql = true
 
 #localhost FetchEngine MySQL5 Server
-jdbc.url = jdbc:mysql://35.164.34.250:3306/rusher?characterEncoding=UTF8&autoReconnect=true
+jdbc.url = jdbc:mysql://localhost:3306/rusher?characterEncoding=UTF8&autoReconnect=true
 jdbc.user = rusher
 jdbc.password = cashrusher
 hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
