add settting exchange_rate ai

--- a/rusher/src/main/webapp/WEB-INF/web.xml
+++ b/rusher/src/main/webapp/WEB-INF/web.xml
@@ -61,6 +61,15 @@
         <url-pattern>/json/jiachadata</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>exchangeRateSettingProcessEndpoint</servlet-name>
+        <servlet-class>com.rusher.servlet.DelegatingServletProxy</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>exchangeRateSettingProcessEndpoint</servlet-name>
+        <url-pattern>/settings/exchange_rate</url-pattern>
+    </servlet-mapping>
+
     <filter>
         <filter-name>openEntityManagerInView</filter-name>
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
