--- a/rusher/src/main/webapp/WEB-INF/web.xml
+++ b/rusher/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>thresholdTriggerProcessEndpoint</servlet-name>
+        <servlet-class>com.rusher.servlet.DelegatingServletProxy</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>thresholdTriggerProcessEndpoint</servlet-name>
+        <url-pattern>threshold_trigger/jiacha</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>exchangeRateSettingProcessEndpoint</servlet-name>
         <servlet-class>com.rusher.servlet.DelegatingServletProxy</servlet-class>
     </servlet>
