update key setting api

--- a/rusher/src/main/profiles/dev/jdbc.properties
+++ b/rusher/src/main/profiles/dev/jdbc.properties
@@ -6,8 +6,8 @@ hibernate.showsql = true
 
 #localhost FetchEngine MySQL5 Server
 jdbc.url = jdbc:mysql://localhost:3306/rusher?characterEncoding=UTF8&autoReconnect=true
-jdbc.user = rusher
-jdbc.password = cashrusher
+jdbc.user = root
+jdbc.password = derbysoft
 hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 jdbc.driver = com.mysql.jdbc.Driver
 
